--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header> <img src="images/fischera-portfoliologo.svg" alt="Logo">
@@ -30,14 +39,14 @@
         <div class="me">
             <img src="images/me.jpg" alt="Me">
         </div>
+        <div class="aboutmeleaf">
+            <img src="images/creamleaf.svg" alt="creamleaf">
+        </div>
         <section id="aboutme">
             <h2>About Me</h2>
             <p>I am a Senior at University of Wisconsin-Eau Claire, and I am an English with Creative Writing Major. My minor is in Multimedia Communication. I love to combine the two and create content for writing and media purposes.</p>
             <img src="images/brownleaf.svg" alt="brownleaf">
         </section>
-        <div class="aboutmeleaf">
-            <img src="images/creamleaf.svg" alt="creamleaf">
-        </div>
         <section id="projects">
             <h2>Projects</h2> <img src="images/brownleaf.svg" alt="brownleaf">
             <a href="file:///Users/austynfischer/Documents/GitHub/cs-318/Lab03/index.html">Lab03</a>
@@ -65,6 +74,15 @@
             <p>UWEC - Chemistry/Biochemistry Clerical Assistant</p>
             <img src="images/brownleaf.svg" alt="brownleaf">
         </section>
+        <div class="schoolleaf">
+            <img src="images/creamleaf.svg" alt="creamleaf">
+        </div>
+        <div class="endleaf">
+            <img src="images/creamleaf.svg" alt="creamleaf">
+        </div>
+        <div class="uwec">
+            <img src="images/UWEC.jpg" alt="UWEC">
+        </div>
     </main>
 </body>
 </html>
